--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 anyio==3.6.2
 asgiref==3.5.2
+astroid==2.12.12
+beanie==1.13.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+dill==0.3.6
 Django==4.1.2
 dnspython==2.2.1
 email-validator==1.3.0
@@ -11,11 +14,19 @@ gunicorn==20.1.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lazy-object-proxy==1.8.0
 MarkupSafe==2.1.1
+mccabe==0.7.0
+motor==3.1.1
+multidict==6.0.2
 orjson==3.8.1
+platformdirs==2.5.2
 pydantic==1.10.2
+pylint==2.15.5
+pymongo==4.3.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
 PyYAML==6.0
@@ -24,6 +35,9 @@ six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.3
 starlette==0.20.4
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.6
 typing_extensions==4.4.0
 ujson==5.5.0
 urllib3==1.26.12
@@ -31,3 +45,5 @@ uvicorn==0.18.3
 uvloop==0.17.0
 watchfiles==0.18.0
 websockets==10.4
+wrapt==1.14.1
+yarl==1.8.1
