--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dill==0.3.6
 Django==4.1.2
 dnspython==2.2.1
 email-validator==1.3.0
+et-xmlfile==1.1.0
 fastapi==0.85.1
 gunicorn==20.1.0
 h11==0.14.0
@@ -22,13 +23,20 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 motor==3.1.1
 multidict==6.0.2
+numpy==1.23.4
+openai==0.24.0
+openpyxl==3.0.10
 orjson==3.8.1
+pandas==1.5.1
+pandas-stubs==1.5.1.221024
 platformdirs==2.5.2
 pydantic==1.10.2
 pylint==2.15.5
 pymongo==4.3.2
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
+pytz==2022.5
 PyYAML==6.0
 requests==2.28.1
 six==1.16.0
@@ -38,6 +46,8 @@ starlette==0.20.4
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
+tqdm==4.64.1
+types-pytz==2022.5.0.0
 typing_extensions==4.4.0
 ujson==5.5.0
 urllib3==1.26.12
