--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
 anyio==3.6.2
 asgiref==3.5.2
 astroid==2.12.12
+attrs==22.1.0
 beanie==1.13.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 dill==0.3.6
-Django==4.1.2
 dnspython==2.2.1
 email-validator==1.3.0
 et-xmlfile==1.1.0
+exceptiongroup==1.0.0
 fastapi==0.85.1
 gunicorn==20.1.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -27,12 +29,17 @@ numpy==1.23.4
 openai==0.24.0
 openpyxl==3.0.10
 orjson==3.8.1
+packaging==21.3
 pandas==1.5.1
 pandas-stubs==1.5.1.221024
 platformdirs==2.5.2
+pluggy==1.0.0
 pydantic==1.10.2
 pylint==2.15.5
 pymongo==4.3.2
+pyparsing==3.0.9
+pytest==7.2.0
+pytest-asyncio==0.20.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
