--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==3.6.2
 asgiref==3.5.2
 astroid==2.12.12
 attrs==22.1.0
+autopep8==2.0.2
 beanie==1.13.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
@@ -34,6 +35,7 @@ pandas==1.5.1
 pandas-stubs==1.5.1.221024
 platformdirs==2.5.2
 pluggy==1.0.0
+pycodestyle==2.10.0
 pydantic==1.10.2
 pylint==2.15.5
 pymongo==4.3.2
